--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -66,6 +66,7 @@
 
 .places-fieldset__choices {
   display: grid;
+  list-style-type: none;
 
   @media (max-width: $mobile-width-only) {
     margin: 0;
