--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -6,6 +6,7 @@
   margin: 0;
   padding-left: 84px;
   padding-right: 85px;
+  list-style-type: none;
 
   @media (min-width: $tablet-width) {
     padding-top: 30px;
