--- a/source/sass/blocks/timeline.scss
+++ b/source/sass/blocks/timeline.scss
@@ -14,6 +14,7 @@
   height: 10px;
   border-radius: 6px;
   background-color: $white-color;
+  cursor: pointer;
 
   @media (min-width: $tablet-width) {
     left: 31%;
