--- a/source/sass/blocks/email.scss
+++ b/source/sass/blocks/email.scss
@@ -54,7 +54,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 17px;
+    margin-left: 0;
     padding-right: 29px;
     padding-top: 0;
 
@@ -98,5 +98,8 @@
 
   @media (min-width: $desktop-width) {
     padding-left: 0;
+    flex-shrink: 0;
+    margin-top: 8px;
+    margin-right: 20px;
   }
 }
