--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -13,6 +13,7 @@
 
   @media (min-width: $desktop-width) {
     padding-top: 3px;
+    max-width: 315px;
   }
 }
 
@@ -27,6 +28,7 @@
 
     padding-right: 16px;
     padding-left: 0;
+    margin-top: 10px;
   }
 }
 
