Убраны глобальные стили для ul элемента.

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -23,6 +23,7 @@
 .advantages__section-cards {
   background-color: $grey-color;
   list-style-type: none;
+  padding: 0;
 
   @media (min-width: $tablet-width) {
     display: grid;
