--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -67,6 +67,7 @@
 .places-fieldset__choices {
   display: grid;
   list-style-type: none;
+  padding: 0;
 
   @media (max-width: $mobile-width-only) {
     margin: 0;
